--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    
+    <title>Messenger</title>
+
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- DaisyUI CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@latest/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
-  <body>
+  <body class="relative before:content-[''] before:absolute before:inset-0 before:bg-black/60  before:z-0 before:pointer-events-none flex justify-center items-center">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
